2002-01-04  Dave Camp  <dave@ximian.com>

	* components/adapter/nautilus-zoomable-proxy.c
	(nautilus_zoomable_prozy_init_epv): Renamed from
	nautilus_get_modified_bonobo_zoomable_epv and changed to
	initialize a passed in epv rather than allocating a new one.
	(nautilus_zoomable_proxy_destroy): 
	(nautilus_zoomable_proxy_finalize): 
	(nautilus_zoomable_proxy_class_init): 
	(nautilus_zoomable_proxy_get): 
	(nautilus_zoomable_proxy_get_type): Derive from BonoboObject rather
	than BonoboZoomable, as this object fully implements the Zoomable
	interface. 

	* components/adapter/nautilus-adapter.c (nautilus_adapter_new): 
	Replaced gtk_signal_connect_object with g_signal_connect_swapped,
	cast callbacks to G_CALLBACK, and use a weak reference rather than
	a "destroy" handler.
	(nautilus_adapter_activate_callback): Pass NULL as the opt_ev
	parameter to bonobo_control_get_remote_ui_container().

	* components/adapter/nautilus-adapter-stream-load-strategy.c
	(nautilus_adapter_stream_load_strategy_load_location): The
	bonobo-stream-vfs code was moved to the VFS moniker in gnome-vfs,
	so use it here.

	* components/adapter/nautilus-adapter-load-strategy.c
	(nautilus_adapter_load_strategy_class_init): replaced
	eel_marshal_VOID__DOUBLE with g_cclosure_marshal_VOID__DOUBLE.
	(nautilus_adapter_load_strategy_get): Disabled the progressive
	data sink code using GNOME2_CONVERSION_COMPLETE.

	* components/adapter/nautilus-adapter-factory-server.c (nautilus_adapter_factory_server_class_init): 
	(nautilus_adapter_factory_server_init):
	(nautilus_adapter_factory_server_finalize):
	(adapter_object_destroyed):
	(impl_Nautilus_ComponentAdapterFactory_create_adapter):
	(nautilus_adapter_factory_server_get_type): Changed to the new
	style of deriving from BonoboObject.
	(impl_Nautilus_ComponentAdapterFactory_create_adapter): Use a weak
	reference to the adapter view rather than connecting to "destroy".
	