@@ -2,7 +2,8 @@ For tasks outside the porting effort, we track them as bugs in
 http://bugzilla.gnome.org. For the porting effort, please let
 darin@bentspoon.com know what you are working on.
 
-- Make closing a window work (Bonobo fixes needed?).
+- Make closing a window work without crashing (Bonobo fixes needed?).
+
 - Port list view to GtkTreeView and then go to eel and remove
   EelCList, EelList, and EelListColumnTitle.
 - Port tree sidebar panel to GtkTreeView and then go to eel and
