@@ -1,11 +1,6 @@
 AC_INIT(src)
 
-dnl ==========================================================================
-dnl
-dnl If you add a version number here, you *must* add an AC_SUBST line for
-dnl it too, or it will never make it into the spec file!
-dnl
-dnl ==========================================================================
+dnl ===========================================================================
 
 ART_REQUIRED=2.3.6
 BONOBO_ACTIVATION_REQUIRED=0.9.3
